tests/regression/baselines/e2e_err_duplicate_record_fields.expected
ERROR
SyntaxError: Repeated field name
// E2E error: duplicate fields in record expression
// Exercises: typeck.rs (duplicate detection via HashMap insert)
let r = {x=1; x=2}
              ^    
Note: Field was already defined here
// E2E error: duplicate fields in record expression
// Exercises: typeck.rs (duplicate detection via HashMap insert)
let r = {x=1; x=2}
         ^         
